data/derived/fa15/progs/unify/prog3413.ml.out
Characters 123-136:
  else remainder i h @ mulByDigit i t;;
       ^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
